@@ -5,6 +5,8 @@ meecast (0.6.9) unstable; urgency=low
   * Added icon and description string to gismeteo.ru 
   * Fixed problem with weather forecast in gismeteo.ru for Australia
   * Added icon for hko.gov.hk
+  * Added UV-index to hko.gov.hk source
+  * Fixed problem with N/A UV-index
 
  -- Vlad Vasiliev <vlad@gas.by>  Mon, 19 Nov 2012 19:31:23 +0200
 
